<resources>
    <string name="app_name">Sms App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment">Home</string>
    <string name="fragment_phone_name">Phone</string>
    <string name="phone">Phone</string>
    <string name="button_save">Save</string>
    <string name="toast_phoneNoDoesntMathc">Phone number doesn\'t match pattern</string>
    <string name="menu_mail">Mails</string>
    <string name="menu_phone">Phones</string>
    <string name="fragment_mail_name">Mails</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="toast_mail_empty">Mail can\'t be empty</string>
    <string name="toast_pass_empty">Password can\'t be empty</string>
    <string name="button_check_pass">Check password</string>
    <string name="connection_successful">Connection successful</string>
    <string name="fragment_task_name">Tasks</string>
    <string name="menu_task">Tasks</string>
    <string name="main_mail">Mail tracked</string>
    <string name="regular_mail">Other mails</string>
    <string name="menu_home">Home</string>
    <string name="main_fragment_service_stopped">Service stopped</string>
    <string name="main_fragment_service_started">Service started</string>
    <string name="service_started">Service stared</string>
    <string name="task_item_sender">Sender</string>
    <string name="task_item_receiver">Reeiver</string>
    <string name="task_item_status">Status</string>
    <string name="task_item_type">Type</string>
    <string name="task_item_message">Message</string>
    <string name="task_item_creating_date">Creating date</string>
    <string name="task_item_status_date">Status date</string>
    <string name="phone_mail"><![CDATA[Phone -> Mail]]></string>
    <string name="mail_phone"><![CDATA[Mail -> Phone]]></string>
    <string name="server_phone"><![CDATA[Server -> Phone]]></string>
    <string name="undefined">Undefined</string>
    <string name="selected_mails">Selected mails</string>
    <string name="server">Server</string>
    <string name="status_not_processed">Not processed</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="status_waiting_for_response">Waiting for response</string>
</resources>
